add chapter 1 results text and prune other text in chapter 1 [#1]

--- a/content/20.partA.md
+++ b/content/20.partA.md
@@ -154,7 +154,7 @@ that we hope will open previously inaccessible parts of its genome for investiga
 ### Chapter 1: Variant discovery in genome graphs
 
 Variation in bacterial genomes can arise through a diverse range of processes. Mutations
-can arise during replication and are inherited vertically, genetic material can be
+can occur during replication and are inherited vertically, genetic material can be
 transferred horizontally, and homologous recombination can lead to eukaryote-like gene
 conversion [@doi:10/b4x7zf]. This breadth of ways in which bacteria can acquire new and
 varied genetic material results gives rise to the phenomenon of a pan-genome. Bacterial
@@ -166,14 +166,13 @@ the specific strain of interest. This works fine when dealing with a single samp
 multiple samples of the same strain. However, when expanding to many samples from
 varying strains, the reference is no longer representative. An alternative solution is
 to focus solely on the core genome - the complement of genes found in all members of a
-species (see Figure {@fig:pangenome}). The issue with this approach is the loss of
-information about variation in all of the non-core genes, which could be a large number
-if the pan-genome is open. See Figure {@fig:pangenome} for an illustration of this
-reference-bias problem.
+species. The issue with this approach is the loss of information about variation in all
+of the non-core genes, which could be a large number if the pan-genome is open. See
+Figure {@fig:pangenome} for an illustration of this reference-bias problem.
 
-![Schematic representation of a pan-genome. Each oval represents the
-genetic content of a single individual within a species. Reference [@doi:10/gfw8gq].](images/pangenome.jpg){#fig:pangenome
-width="50%"}
+<!--![Schematic representation of a pan-genome. Each oval represents the-->
+<!--genetic content of a single individual within a species. Reference [@doi:10/gfw8gq].](images/pangenome.jpg){#fig:pangenome-->
+<!--width="50%"}-->
 
 The message we are aiming to drive home at the beginning of this chapter is that
 reference-based analysis fundamentally cannot access all of the variation in a bacterial
@@ -191,16 +190,11 @@ approximating a genome as a hierarchical mosaic. At a high-level, it represents 
 of loci - usually genes and intergenic regions - while at the locus-level, it is a
 mosaic of previously-seen genomes.
 
-`pandora` has two main workflows: `map` and `compare`. `map` aims to infer a consensus
-sequence from a PRG for a single sample. The consensus sequence says two things about
-the sample: the loci present in the sample, and the most likely path through the PRG for
-each present locus. Optionally, `map` can run genotyping of the sample, providing a
-Variant Call Format (VCF) file for the sample with respect to the consensus sequence (or
-a user-provided sequence). `compare` aims to infer a consensus sequence that best
-represents a given set of genomes and then genotype each sample with respect to this
-inferred "average" genome. The advantage of this approach is that the consensus best
-represents the specific samples provided. This allows for genotyping across the *entire*
-pan-genome. If a gene is present in only 2 of 50 samples then genotyping information is
+`pandora` aims to infer a consensus sequence from a PRG for a single sample or a
+collection of samples. In the case of a collection of samples, the consensus sequence
+will be one that collection of samples. `pandora` can additionally perform genotyping of
+the sample(s) with respect to this inferred consensus and produces a Variant Call Format
+(VCF) file. If a gene is present in only 2 of 50 samples then genotyping information is
 provided for those 2 samples and null for the other 48.
 
 While `pandora`, before the work in this chapter, allows comparison of genomes to a
@@ -222,54 +216,28 @@ these regions and add them back into the PRG for consideration when remapping.
 
 We define a candidate region, $r$, as an interval within a local graph where coverage on
 the maximum likelihood path is less than a given threshold, $c$, for more than $l$
-consecutive positions. For a given read that has a mapping to $r$, we define $s_r$ to be
-the subsequence of the read mapping to $r$. We define the pileup $P_r$ as the set of all
+consecutive positions. Any $r$ within a specified distance of each other are then
+merged. For a given read that has a mapping to $r$, we define $s_r$ to be the
+subsequence of the read mapping to $r$. We define the pileup $P_r$ as the set of all
 $s_r \in r$.
 
 ##### Enumerating paths through candidate regions
 
-For $r \in R$, where $R$ is the set of all candidate regions, we construct a de Bruijn
-graph $G_r$ from $P_r$.  
-$A_L$ and $A_R$ are defined as k-mers to the left and right of $r$ in the local graph.
-They are anchors to allow re-insertion of new sequences found by *de novo* discovery
-into the local graph. If $A_L \notin G_r \lor A_R \notin G_r$ then we abandon *de novo*
-discovery for $r$.  
-$T_r$ is the spanning tree obtained by performing depth-first search (DFS) on $G_r$ from
-node $A_L$. $p_r$ is defined as a path, from the root node $A_L$ of $T_r$ and ending at
-node $A_R$, which fulfills the following two conditions:
-
-- $p_r$ is shorter than the maximum allowed path length.
-- No more than $k$ nodes along $p_r$ have coverage $< (n_r \times 0.1) \times e_r$,
-  where $n_r$ is the a counter, described below, and $e_r$ is the expected k-mer
-  coverage for $r$.
-
-$V_r$ is the set of all $p_r$. If $|V_r|$ is greater than a predefined threshold, $n_r$
-is incremented by 1 and $V_r$ is repopulated. If $n_r \times 0.1 = 1.0$ then *de novo*
-discovery is abandoned for $r$.
+We construct a de Bruijn graph from each $P_r$. Using anchor k-mers either side of the
+candidate region, find all paths that exist in the de Bruijn graph between the anchors,
+using a depth-first search (DFS) tree - starting with the left anchor. If the path is
+longer than a certain threshold, we discard it. Or, if there are too many paths, we
+abandon variant discovery for that region altogether.
 
 ##### Pruning the path-space in a candidate region
 
-As `pandora` operates on both accurate and error-prone sequencing reads, the number of
-valid paths in $G_r$ can be very large. In testing, this results in run-times beyond
-seven days (the longest any attempt was allowed to run). The increased run-time is due
-to cycles that can occur in $G_r$ and exploring paths that will never reach our required
-end anchor $A_R$. In order to reduce the path-space within $G_r$ we prune paths based on
-multiple criteria. Critically, this pruning happens at each step of the graph walk
-(path-building).  
-In addition to $T_r$, obtained by performing DFS on $G_r$, we produce a distance map
-$D_r$ that results from running reversed breadth-first search (BFS) on $G_r$, beginning
-from node $A_R$. We say reversed BFS as we explore the predecessors of each node, rather
-than the successors. $D_r$ is implemented as a binary search tree where each node in the
-tree represents a k-mer in $G_r$ that is reachable from $A_R$ via reversed BFS. Each
-node additionally has an integer attached to it that describes the shortest path from
-that node to $A_R$.  
-We can use $D_r$ to prune the path-space by requiring, for each node, $n \in p_r$: is $n
-\in D_r$ **and** can $A_R$ be reached from $n$ in a minimum of $i$ nodes, where $i$ is
-defined as the maximum allowed path length minus the number of nodes walked to reach
-$n$. If one of these conditions is not met, we abandon $p_r$. The advantage of this
-pruning process is that we never explore paths that will not reach our required end
-point and when caught in a cycle, we will abandon the path once we have made too many
-iterations around the cycle.
+As the path enumeration step has the potential for combinatorial explosion due to cycles
+in the graph, and erroneous reads causing "dead-ends", we prune the DFS tree. To do
+this, we produce a distance map $D_r$ by running reversed breadth-first search (BFS) on
+the de Bruijn graph, beginning from the *right* anchor. Each entry in the distance map
+describes the shortest path from that node to the end anchor. So as we walk along the
+DFS tree, if a node is not reachable within our maximum distance threshold, we abandon
+path enumeration.
 
 I programmed the above methods in C++ and added them into the code base for `pandora`.
 They constitute 1325 lines of source code and 3486 lines of test code. I had help with
@@ -277,98 +245,100 @@ the implementation of multi-threading the *de novo* component and the BFS prunin
 Leandro Ishi. The overall workflow for `pandora` with *de novo* variant discovery
 enabled is illustrated in Figure {@fig:pandora}.
 
-![Schematic of the `pandora` method. Note Steps 4-6 are those developed and added
-in the scope of chapter 1. 1) A Population Reference Graph (PRG) built from known
-variants or previous samples. 2) Sequencing reads to try and map on to the PRG. 3) Reads
-mapped on to the PRG (where possible) using minimising k-mers. Coloured segments show
-paths where reads map. 4) Local assembly of the reads using a de Bruijn graph due to
-lower than expected coverage on a section of the PRG (many unmapped reads). A new path
-is discovered (orange). 5) The new path is added into the original PRG. 6) Reads are
-remapped to the new PRG with many reads mapping to the newly included path (orange).](images/pandora.png){#fig:pandora
-width="80%"}
+<!--![Schematic of the `pandora` method. Note Steps 4-6 are those developed and added-->
+<!--in the scope of chapter 1. 1) A Population Reference Graph (PRG) built from known-->
+<!--variants or previous samples. 2) Sequencing reads to try and map on to the PRG. 3) Reads-->
+<!--mapped on to the PRG (where possible) using minimising k-mers. Coloured segments show-->
+<!--paths where reads map. 4) Local assembly of the reads using a de Bruijn graph due to-->
+<!--lower than expected coverage on a section of the PRG (many unmapped reads). A new path-->
+<!--is discovered (orange). 5) The new path is added into the original PRG. 6) Reads are-->
+<!--remapped to the new PRG with many reads mapping to the newly included path (orange).](images/pandora.png){#fig:pandora-->
+<!--width="80%"}-->
 
 #### Evaluation
 
 ##### Simulated data
 
-The first step in evaluating the effect of adding *de novo* variant calling to `pandora`
-is with a simulated dataset. What we aim to show here is that the addition of *de novo*
-discovery allows `pandora` to improve its probability of variant detection (recall). The
-first step was randomly selecting 100 gene MSAs from a pool of 29702 obtained for
-*Escherichia coli* from the panX database [@doi:10/gczkbr]. Next, a PRG is constructed
-for each gene MSA, and a random path through each is selected using `pandora`. Each
-PRG's random path is then concatenated together to form a single "genome" sequence. We
-subsequently add SNPs to the simulated genome at a specified rate of SNPs per-gene using
-`snp-mutator` [@doi:10/d9np]. We then simulated Nanopore reads from this mutated genome
-using `nanosim-h` [@doi:10/gbj69k; @doi:10/d9nq]. `pandora map` is then run, using the
-original PRG as input, along with the reads simulated from the mutated genome. With this
-approach, we know the exact SNPs we hope to find. After running the `map` routine, we
-are left with a collection of candidate paths produced by the *de novo* component. We
-then added these back into the PRG and iterated the `map` routine again, this time
-without *de novo* discovery enabled. Re-adding variants into the graph has the effect of
-making all of the *de novo* variants visible to genotyping. The result is a VCF file
-that (hopefully) contains the variants we introduced in the beginning. To compare the
-performance of `pandora` before and after *de novo* is added, we can compare the VCF
-produced from the first round of `map` with the last VCF.
+I have previously presented results from evaluating this new *de novo* variant discovery
+method on simulated data to ensure if does indeed do as it advertises. For the sake of
+keeping this report concise, I will refrain from repeating the results here, except to
+say that this method does indeed find a large number of variants not already in the PRG.
 
-To avoid error-prone conversion of linear coordinates into graph coordinates the
-evaluation of whether the variants called by `pandora` are correct was undertaken in a
-slightly more convoluted manner. We define a probe-set $P$ as a collection of probes,
-$p$, where $p$ represents an entry, $e$, in a VCF file, $V$. For each $e \in V$, $p$ is
-constructed by the concatenation of $l_w$, $e_c$, and $r_w$ (in that order), where $e_c$
-is the called variant of $e$, and $l_w$ and $r_w$ are the sequences, of maximum length
-$w$, in the VCF reference to the left and right, respectively, of $e_c$.
+<!--The first step in evaluating the effect of adding *de novo* variant calling to `pandora`-->
+<!--is with a simulated dataset. What we aim to show here is that the addition of *de novo*-->
+<!--discovery allows `pandora` to improve its probability of variant detection (recall). The-->
+<!--first step was randomly selecting 100 gene MSAs from a pool of 29702 obtained for-->
+<!--*Escherichia coli* from the panX database [@doi:10/gczkbr]. Next, a PRG is constructed-->
+<!--for each gene MSA, and a random path through each is selected using `pandora`. Each-->
+<!--PRG's random path is then concatenated together to form a single "genome" sequence. We-->
+<!--subsequently add SNPs to the simulated genome at a specified rate of SNPs per-gene using-->
+<!--`snp-mutator` [@doi:10/d9np]. We then simulated Nanopore reads from this mutated genome-->
+<!--using `nanosim-h` [@doi:10/gbj69k; @doi:10/d9nq]. `pandora map` is then run, using the-->
+<!--original PRG as input, along with the reads simulated from the mutated genome. With this-->
+<!--approach, we know the exact SNPs we hope to find. After running the `map` routine, we-->
+<!--are left with a collection of candidate paths produced by the *de novo* component. We-->
+<!--then added these back into the PRG and iterated the `map` routine again, this time-->
+<!--without *de novo* discovery enabled. Re-adding variants into the graph has the effect of-->
+<!--making all of the *de novo* variants visible to genotyping. The result is a VCF file-->
+<!--that (hopefully) contains the variants we introduced in the beginning. To compare the-->
+<!--performance of `pandora` before and after *de novo* is added, we can compare the VCF-->
+<!--produced from the first round of `map` with the last VCF.-->
 
-A truth probe-set, $P_t$, was constructed from the VCF of variants added to the
-simulated genome and a query probe-set, $P_q$, from the variants called by `pandora`. We
-then mapped all probes from $P_t$ to $P_q$ using `bwa mem` [@arxiv:1303.3997]. We then
-classify each mapped probe as a false positive or true positive and calculate precision
-and recall for the pre-*de novo* and post-*de novo* VCF files from `pandora`. As
-expected, Figure {@fig:simulation_roc} shows that without *de novo* variant discovery,
-we are unable to find almost all introduced variants. In future work, we plan to add
-indels to the simulations.
+<!--To avoid error-prone conversion of linear coordinates into graph coordinates the-->
+<!--evaluation of whether the variants called by `pandora` are correct was undertaken in a-->
+<!--slightly more convoluted manner. We define a probe-set $P$ as a collection of probes,-->
+<!--$p$, where $p$ represents an entry, $e$, in a VCF file, $V$. For each $e \in V$, $p$ is-->
+<!--constructed by the concatenation of $l_w$, $e_c$, and $r_w$ (in that order), where $e_c$-->
+<!--is the called variant of $e$, and $l_w$ and $r_w$ are the sequences, of maximum length-->
+<!--$w$, in the VCF reference to the left and right, respectively, of $e_c$.-->
 
-![Precision-recall curve for `pandora` simulations with (circles) and without (crosses) *de novo* variant
-discovery. This plot is measuring the proportion of SNPs we introduced into our
-simulated genome we correctly found (recall) on the X-axis. On the Y-axis is the
-proportion of calls we made which were correct (precision). Colours represent different
-coverage depth. Each point represents a different genotype confidence
-threshold.](images/simulation_roc_denovo_and_no_denovo.png){#fig:simulation_roc
-width="90%"}
+<!--A truth probe-set, $P_t$, was constructed from the VCF of variants added to the-->
+<!--simulated genome and a query probe-set, $P_q$, from the variants called by `pandora`. We-->
+<!--then mapped all probes from $P_t$ to $P_q$ using `bwa mem` [@arxiv:1303.3997]. We then-->
+<!--classify each mapped probe as a false positive or true positive and calculate precision-->
+<!--and recall for the pre-*de novo* and post-*de novo* VCF files from `pandora`. As-->
+<!--expected, Figure {@fig:simulation_roc} shows that without *de novo* variant discovery,-->
+<!--we are unable to find almost all introduced variants. In future work, we plan to add-->
+<!--indels to the simulations.-->
+
+<!--![Precision-recall curve for `pandora` simulations with (circles) and without (crosses) *de novo* variant-->
+<!--discovery. This plot is measuring the proportion of SNPs we introduced into our-->
+<!--simulated genome we correctly found (recall) on the X-axis. On the Y-axis is the-->
+<!--proportion of calls we made which were correct (precision). Colours represent different-->
+<!--coverage depth. Each point represents a different genotype confidence-->
+<!--threshold.](images/simulation_roc_denovo_and_no_denovo.png){#fig:simulation_roc-->
+<!--width="90%"}-->
 
 ##### Empirical data - multi-sample comparison
 
 This section will be the major focus for the evaluation of both *de novo* *and*
-`pandora` and will constitute the results section of the `pandora` paper (near
-completion). We aim to show, with the *compare* routine, the power of using a PRG
-instead of a single reference along with `pandora`'s performance compared to
-`nanopolish` and `medaka` (Nanopore) and `snippy` (Illumina)
-[@https://github.com/tseemann/snippy]. We compare 20 samples, from across the *E. coli*
-phylogeny. As other variant callers do not use a PRG we carefully selected 24
-single-reference genomes representing the diversity of the *E. coli* phylogenetic tree
-as best as possible. Each variant caller was run once for each reference genome with the
-aim being to show that the more samples in the analysis, the lower the number of
-variants the caller can find.
+`pandora` and will constitute (part of) the results section of the `pandora` paper (near
+completion). We show the power of using a PRG, instead of a single reference, along with
+`pandora`'s performance compared to Nanopore- and Illumina-based variant callers. We
+compare 20 samples, from across the *E. coli* phylogeny. As other variant callers do not
+use a PRG we carefully selected 24 single-reference genomes representing the diversity
+of the *E. coli* phylogenetic tree as best as possible. Each variant caller was run once
+for each reference genome with the aim being to show that the more samples in the
+analysis (i.e. the larger the pan-genome of the samples), the lower the number of
+variants the other callers can find.
 
-The evaluation follows a similar method to the [Simulated data](#simulated-data). The
-truth for this analysis, however, is a bit more complicated. In the process of
-developing an evaluation framework, we produced a python package called `varifier`
-(<https://github.com/iqbal-lab-org/varifier>). Briefly, for precision, `varifier`
-creates 'probes' for each variant in the VCF, using the genome the variants we called
-with-respect-to. It then maps these probes to the truth genome for the sample and
-determines the distance between the variant component of the probe and the part of the
-truth genome it maps to. For recall evaluation, `varifier` collects all differences in
-the pairwise alignment between the truth and VCF-reference genomes. Probes are created
-for these differences (based on the truth genome) and they are mapped to an augmented
-version of the VCF-reference genome, which has had the variants applied to it. The
-mappings are then evaluated in the same way as for precision.  
-As `pandora compare` calls variants for each sample with respect to an inferred best
-approximation sequence for all samples, creating the set of truth variants is slightly
-different. We perform a pairwise alignment for all pairs of samples and collect all the
-differences from this alignment. We then deduplicate this panel to ensure variants are
-not "double counted", meaning core genome variants would have an unbalanced effect on
-the overall precision and recall. We then follow the same probe-mapping approach from
-`varifier` with these truth variants.
+In the process of developing an evaluation framework, we produced a python package
+called `varifier` (<https://github.com/iqbal-lab-org/varifier>). Briefly, for precision,
+`varifier` creates 'probes' for each variant in the VCF, using the genome the variants
+were called with-respect-to. It then maps these probes to the truth genome for the
+sample and determines the distance between the variant component of the probe and the
+part of the truth genome it maps to. For recall evaluation, `varifier` collects all
+differences in the pairwise alignment between the truth and VCF-reference genomes.
+Probes are created for these differences (based on the truth genome) and they are mapped
+to an augmented version of the VCF-reference genome, which has had the variants applied
+to it. The mappings are then evaluated in the same way as for precision.  
+As `pandora` calls variants for each sample with respect to an inferred best
+approximation sequence, creating the set of truth variants is slightly different. We
+perform a pairwise alignment for all pairs of samples and collect all the differences
+from this alignment. We then deduplicate this panel to ensure variants are not "double
+counted", meaning core genome variants would have an unbalanced effect on the overall
+precision and recall. We then follow the same probe-mapping approach from `varifier`
+with these truth variants.
 
 Figure {@fig:basecall_model} shows, for a subset of four samples, two important results
 regarding the effect of (unfiltered) *de novo* variant discovery in `pandora`. Firstly,
@@ -385,20 +355,41 @@ amount of this methylation-related systematic bias - by using a methylation-awar
 (orange line in Figure {@fig:basecall_model}) - shows that enabling discovery of novel
 variants improves both error rate and recall for `pandora`.
 
-
-![Effect of Nanopore basecalling model](images/basecall_model.png){#fig:basecall_model
+![Effect of Nanopore basecalling model on `pandora` variant calling error rate (1-precision; X-axis) and recall (Y-axis). The default model is in green, whilst the methylation-aware model is in orange. The dashed line represents using the *de novo* variant discovery method in `pandora`. The line shows the effect of increasing the genotype confidence score threshold - i.e. moves line towards bottom left.](images/basecall_model.png){#fig:basecall_model
 width="80%"}
 
-We filtered `pandora` (Nanopore/Illumina) variants based on the following criteria:
+For comparison with other variant callers we filtered `pandora` (Nanopore/Illumina)
+variants based on the following criteria:
 
 - Depth less than 10x/5x
 - Less than 5%/5% of reads are on one strand
 - 60%/80% or more of k-mers on the allele have zero coverage
 
-![Recall](images/recall.png){#fig:recall}
+As the main claim with the `pandora` method is that the use of genome graphs allows for
+more power to discover variants in the accessory genome, we assess the recall in that
+light. We group loci based on the number of samples they are found in and calculate the
+recall for each group. The more samples a locus is found in, the more likely it is a
+core genome locus. Figure {@fig:recall} shows that in loci shared by less than 13 (65%)
+samples, `pandora` has recall at least inline with other variant callers for both
+Nanopore and Illumina reads. However, when the number of shared samples is less than 6
+(30%), `pandora`'s recall is significantly greater for both sequencing technologies.
 
+![Variant caller recall across the pan-genome. The Y-axis shows the number of variants found. The X-axis shows, for each locus, how many samples is it found in (i.e. left is more "accessory" and right is more "core"). The panels split the results by Illumina (left) and Nanopore (right) data and variant callers. The boxes represent using different reference genomes from across the phylogenetic tree to call variants (for non-`pandor` callers).](images/recall.png){#fig:recall}
 
-![Precision](images/precision.png){#fig:precision}
+We then show in Figure {@fig:precision} that the variants called by `pandora` have
+significantly higher precision than `nanopolish` and `medaka` for Nanopore data and
+`samtools` for Illumina. `snippy` (Illumina) does have a superior precision to `pandora`
+though. One other important point is that, aside from `snippy` all other variant
+caller's precision varies quite a lot depending on the choice of reference genome.
+`pandora`, on the other hand, maintains consistent precision regardless of the
+phylogroup of a sample.
+
+Both of these results highlight that the choice of reference genome can have a big
+effect on the results of variant calling. However, using a genome graph to represent a
+pan-genome, you gain access to variation from the accessory genome that is "invisible"
+to standard linear reference-based approaches.
+
+![Precision (Y-axis) per-sample for Illumina (left) and Nanopore (right) data. The boxes represent using different reference genomes from across the phylogenetic tree to call variants (for non-`pandora` callers) and are coloured by variant caller.](images/precision.png){#fig:precision}
 
 Whilst I wrote nearly all of the code and associated tests for evaluating the recall for
 this analysis, a lot of it has since been refactored by Leandro Ishi and by Martin Hunt
@@ -416,14 +407,6 @@ candidates back into the PRG. The current procedure requires a fairly laborious,
 multi-step process for adding *de novo* candidates into the PRG, requiring the user to
 run a separate pipeline from `pandora`. Ultimately this will need to be handled all
 within the `pandora` program with no intervention from the user.  
-To measure whether the reference bias effect in Figure {@fig:refbias} is real and
-significant, we plan to measure it in three species: *E. coli*, *Klebsiella pneumoniae*,
-and *Streptococcus pneumoniae*. For each of the species, we will take a set of
-high-quality reference genomes, and perform the pair-wise alignment-based evaluation
-from the `pandora` [multi-sample comparison](#empirical-data---multi-sample-comparison).
-This work will aid the message in the introduction to my first chapter. Much of this
-work is being completed by Leandro Ishi, but it borrows heavily on some of the
-evaluation code I have written for the multi-sample comparison.  
 Lastly, there is an ongoing refinement of the *de novo* variant discovery process from
 the work in Chapters 2 and 3. The analysis in these chapters lean heavily on `pandora`,
 but for Mtb, which has a very different pan-genome to that of *E. coli* - which was used
@@ -861,8 +844,8 @@ other bacteria.
 
 One question which will be of particular interest for this section will be whether reads
 covering one *pe/ppe* gene map to various others. If, as shown by others, *pe/ppe* genes
-arose through gene conversion [@pmc:PMC1660551], we would expect this to be the case. However,
-having high-quality assemblies built from a combination of long- and short-read
+arose through gene conversion [@pmc:PMC1660551], we would expect this to be the case.
+However, having high-quality assemblies built from a combination of long- and short-read
 technologies, we hope we can improve on the current nucleotide resolution and allow more
 accurate mapping to these genes. The main deliverable from this section will be a
 collection of high-quality *pe/ppe* PRGs with information about what read length will
