cutting down text

--- a/content/30.partB.md
+++ b/content/30.partB.md
@@ -112,34 +112,27 @@ research within the reproducible bioinformatics field.
 
 #### Please comment on the types of position you would like to apply to for after the PhD and your expected application timeline?
 
-I have already been in discussions with Lachlan Coin (my Master's supervisor), from the
-University of Melbourne, about the possibility of a job post-PhD. He recently received
-funding for a project aimed at implementation, in Papua New Guinea, of rapid
-direct-from-sample DNA sequencing approaches to characterise drug resistant
+I have already been in discussions with my Master's supervisor about a job post-PhD. He
+recently received funding for a project aimed at implementation, in Papua New Guinea, of
+rapid direct-from-sample DNA sequencing approaches to characterise drug resistant
 tuberculosis, and evaluation of the accuracy of this approach compared to standard
-culture-based approaches. The bioinformatics component of this project is not yet filled
-and Lachlan and I are in discussions about the possibility of me joining the project in
-either a postdoc or research officer capacity.
+culture-based approaches. The bioinformatics component of this project is not yet
+filled. We are in discussions about the possibility of me joining the project in either
+a postdoc or research officer capacity.
 
 There are also a couple of Australian-based postdoctoral fellowships I would like to
 apply for within the next year or two:
 
 - Australian Research Council (ARC) [Discovery Early Career Researcher Awards][decra]
-  (DECRA). The applications for funding beginning 2022 closes on October 14 2020.
-  Therefore, I will need to apply for this fellowship next year (for 2023 funding). This
-  grant provides focused research support for early career researchers in both teaching
-  and research, and research-only positions.
+  (DECRA). This grant provides focused research support for early career researchers in
+  both teaching and research, and research-only positions. The applications for funding
+  beginning 2023 closes in October 2021.
 - [NHMRC Investigator Grant][nhmrc]: These grants provide the investigator with
   flexibility to pursue important new research directions as they arise and to form
   collaborations as needed, rather than being restricted to the scope of a specific
   research project. This grant has been [postponed][postpone], but applications are
-  likely to open in February/March 2021. I will need to try and begun discussions with a
-  university partner in order to be able to apply for this funding and come up with a
-  project.
-
-In addition to these national-level funding schemes, I have started contacting
-researchers in Queensland to discuss mutual research interests and see if there is any
-funding already available within established projects.
+  likely to open in February/March 2021. I will need to begin discussions with a
+  university partner in order to be able to apply for this funding.
 
 #### What do you see as your strengths (2-3 skills)?
 
