--- a/content/30.partB.md
+++ b/content/30.partB.md
@@ -88,6 +88,8 @@ I plan to submit (pending the six-month extension) my thesis in (INSERT MONTH) 2
 
 ### List of scientific courses and conferences attended to date and planned for next year
 
+- [RECOMB][recomb], Padova, Italy - April 2021
+- [Computational Pan-genomics workshop][bielefeld], Bielefeld, Germany - February 2021
 - Applied Bioinformatics and Public Health Microbiology, Hinxton, UK - May 2021
 - [TBScience][tbscience] - October 2020 (virtual)
 - [Genome Informatics][gi] - September 2020 (virtual)
@@ -181,4 +183,5 @@ apply for within the next year or two:
 [nhmrc]: https://www.nhmrc.gov.au/funding/find-funding/investigator-grants
 [postpone]: https://www.nhmrc.gov.au/about-us/news-centre/changes-nhmrcs-grant-schedule-and-policies-response-covid-19
 [tbscience]: https://conf2020.theunion.org/programme/tb-science/
+[recomb]: https://www.recomb2021.org/
 
