update executive summary

--- a/content/10.tac.md
+++ b/content/10.tac.md
@@ -8,4 +8,33 @@
 **Starting Date**: 12/10/2017  
 **Qualifying Assessment Date**: 06/07/2018  
 **Second TAC Meeting**: 15/10/2019  
-**Third TAC Meeting**: 13/10/2020
+**Third TAC Meeting**: 13/10/2020  
+**Current Contract Expiry**: 11/04/2021
+
+### Executive summary
+
+#### Progress
+
+- The content of Chapter 1 is effectively finished and a paper covering the work
+  (second-author) is in the process of submission. All that remains is to write the
+  thesis chapter.
+- The major publication from this thesis comprises the work in chapters 2 & 3. I am on
+  track to have this paper complete and submitted by the end of quarter 1 2021.
+- All results for chapter 2 are close to complete. I have written some of this chapter
+  and hope to complete the methods and results by the end of 2020.
+- The "start-up" work and method refinement for chapter 3 are mostly complete as they
+  are intertwined with chapter 2. I expect to have chapter 3 complete in quarter 1 of
+  2021\.
+
+#### Timeline
+
+**Chapter 1**: written by April 2021.  
+**Chapters 2 & 3**: written by March 2021.  
+**Chapter 4**: Begin work in February/March 2021 and will likely require 6 months of
+work to get it to a stage where I can write a chapter about it. Unlikely to reach
+publication stage within my PhD.
+
+---
+
+Taking the progress and timelines outlined above into account, I would like to ask for a
+6-month extension from 3.5 to 4 years.
