--- a/content/30.partB.md
+++ b/content/30.partB.md
@@ -41,7 +41,7 @@ am also involved in the following publications:
   improve read and consensus accuracy. This attempt did not yield a more accurate model
   than the default, but we think it is important to make this result available and
   challenge others to do the same for their species-of-interest.
-- I am third-author on a new manuscript for the workflow management system `snakemake`
+- I am a co-author on a new manuscript for the workflow management system `snakemake`
   [@doi:10.1093/bioinformatics/bts480]. The manuscript is in the process of being
   submitted to *Nature Communications*. I contributed to this work by co-developing a
   tool called `snakefmt` (<https://github.com/snakemake/snakefmt>) that is used to
@@ -49,6 +49,9 @@ am also involved in the following publications:
   workflows. Additionally, I also developed and maintain the `snakemake`
   ["profile"][lsf] that configures job submission and status-checking for the LSF
   cluster system.
+- A paper in review at *Emerging Infectious Diseases* by some of our collaborators in
+  Madagascar about a lemur that contracted and died of TB. I performed the WGS analysis
+  that was required to address previous major revisions they had been asked to make.
 - I plan to submit an ["Application Note"][app-note] to *Bioinformatics* for `rasusa`
   [@doi:10/d9rz]. This is a tool I wrote in the Rust programming language to randomly
   subsample sequencing reads to a specified coverage.
@@ -84,7 +87,7 @@ when I need to submit.
 Lastly, I will work on the introductory chapter. I prefer to do this once I have a clear
 picture of all of the topics touched on in the body of the work.
 
-I plan to submit (pending the six-month extension) my thesis in (INSERT MONTH) 2021.
+I plan to submit (pending a six-month extension) my thesis in October 2021.
 
 ### List of scientific courses and conferences attended to date and planned for next year
 
